--- a/scss/style.scss
+++ b/scss/style.scss
@@ -90,14 +90,15 @@ body{
 
 #frame_2, #frame_3, #frame_4, #frame_5, #frame_6, #frame_7{
     position: absolute;
-    width: 100vw;
-    height: 100%;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
     top: 0;
+    width: 100%;
+    height: 100vh;
     right: -100vw;
-    transition: right 1s ease-out;
+    transition: right 1.8s ease-out;
+    img {
+        object-fit: fill;
+        height: 100vh;
+    }
 }
 #frame_2{
     background-image: url("../assets/angers.jpg");
