--- a/scss/style.scss
+++ b/scss/style.scss
@@ -117,6 +117,43 @@ body{
 }
 #frame_7{
     background: white;
+    color: black;
+}
+
+.title_menu_photos{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    font-size: 18rem;
+    opacity: 0.1;
+}
+.liste_photos{
+    position: absolute;
+    top: 0;
+    right: 0;
+    list-style: none;
+    text-align: right;
+    li{
+        opacity: 0.1;
+        font-size: 5rem;
+        transition: all 0.3s;
+    }
+    li:hover{
+        opacity: 1;
+        font-size: 5.5rem;
+    }
+}
+.arrow{
+    position: absolute;
+    bottom: 0;
+    right: 20px;
+    font-size: 10rem;
+    opacity: 0.1;
+    transition: all 0.3s;
+}
+.arrow:hover{
+    opacity: 1;
+    transform: scale(1.1);
 }
 
 @import url('https://fonts.googleapis.com/css2?family=NeueMontreal&display=swap');
