--- a/scss/style.css
+++ b/scss/style.css
@@ -119,26 +119,6 @@ body {
   height: 100vh;
 }
 
-#frame_2 {
-  background-image: url("../assets/angers.jpg");
-}
-
-#frame_3 {
-  background-image: url("../assets/argentique.jpg");
-}
-
-#frame_4 {
-  background-image: url("../assets/facade.jpg");
-}
-
-#frame_5 {
-  background-image: url("../assets/fete_forraine.jpg");
-}
-
-#frame_6 {
-  background-image: url("../assets/marche.jpg");
-}
-
 #frame_7 {
   background: white;
   color: black;
@@ -150,10 +130,16 @@ body {
   left: 0;
   font-size: 18rem;
   opacity: 0.1;
+  -webkit-clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
+          clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
+  transition: -webkit-clip-path 0.4s ease-in-out;
+  transition: clip-path 0.4s ease-in-out;
+  transition: clip-path 0.4s ease-in-out, -webkit-clip-path 0.4s ease-in-out;
 }
 
 .liste_photos {
   position: absolute;
+  width: 100%;
   top: 0;
   right: 0;
   list-style: none;
@@ -162,11 +148,22 @@ body {
 .liste_photos li {
   opacity: 0.1;
   font-size: 5rem;
-  transition: all 0.3s;
+  -webkit-clip-path: polygon(0 100%, 100% 100%, 100% 100%, 0 100%);
+          clip-path: polygon(0 100%, 100% 100%, 100% 100%, 0 100%);
+  transition: all 0.4s;
 }
 .liste_photos li:hover {
   opacity: 1;
   font-size: 5.5rem;
+}
+
+.design_menu {
+  position: absolute;
+  width: 100%;
+  right: -100%;
+}
+.design_menu li {
+  list-style: none;
 }
 
 .arrow {
@@ -175,7 +172,9 @@ body {
   right: 20px;
   font-size: 10rem;
   opacity: 0.1;
-  transition: all 0.3s;
+  -webkit-clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
+          clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
+  transition: all 0.4s ease-in-out;
 }
 
 .arrow:hover {
