--- a/scss/style.scss
+++ b/scss/style.scss
@@ -100,21 +100,6 @@ body{
         height: 100vh;
     }
 }
-#frame_2{
-    background-image: url("../assets/angers.jpg");
-}
-#frame_3{
-    background-image: url("../assets/argentique.jpg");
-}
-#frame_4{
-    background-image: url("../assets/facade.jpg");
-}
-#frame_5{
-    background-image: url("../assets/fete_forraine.jpg");
-}
-#frame_6{
-    background-image: url("../assets/marche.jpg");
-}
 #frame_7{
     background: white;
     color: black;
@@ -126,9 +111,12 @@ body{
     left: 0;
     font-size: 18rem;
     opacity: 0.1;
+    clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
+    transition: clip-path 0.4s ease-in-out;
 }
 .liste_photos{
     position: absolute;
+    width: 100%;
     top: 0;
     right: 0;
     list-style: none;
@@ -136,11 +124,20 @@ body{
     li{
         opacity: 0.1;
         font-size: 5rem;
-        transition: all 0.3s;
+        clip-path: polygon(0 100%, 100% 100%, 100% 100%, 0 100%);
+        transition: all 0.4s;
     }
     li:hover{
         opacity: 1;
         font-size: 5.5rem;
+    }
+}
+.design_menu{
+    position: absolute;
+    width: 100%;
+    right: -100%;
+    li{
+        list-style: none;
     }
 }
 .arrow{
@@ -149,7 +146,8 @@ body{
     right: 20px;
     font-size: 10rem;
     opacity: 0.1;
-    transition: all 0.3s;
+    clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
+    transition: all 0.4s ease-in-out;
 }
 .arrow:hover{
     opacity: 1;
