--- a/scss/style.css
+++ b/scss/style.css
@@ -157,13 +157,34 @@ body {
   font-size: 5.5rem;
 }
 
+.photos_menu,
+.design_menu {
+  transition: all 0.3s;
+}
+
+.hide_photos_menu {
+  transform: translate(-100%, 0);
+}
+
+.show_design_menu {
+  transform: translate(-100%, 0);
+}
+
 .design_menu {
   position: absolute;
   width: 100%;
   right: -100%;
 }
 .design_menu li {
-  list-style: none;
+  opacity: 0.1;
+  font-size: 5rem;
+  -webkit-clip-path: polygon(0 100%, 100% 100%, 100% 100%, 0 100%);
+          clip-path: polygon(0 100%, 100% 100%, 100% 100%, 0 100%);
+  transition: all 0.4s;
+}
+.design_menu li:hover {
+  opacity: 1;
+  font-size: 5.5rem;
 }
 
 .arrow {
@@ -175,6 +196,15 @@ body {
   -webkit-clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
           clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
   transition: all 0.4s ease-in-out;
+}
+
+.arrow_design {
+  transform: rotate(180deg) !important;
+  left: 20px !important;
+}
+
+.arrow_design {
+  transform: scale(1.1) rotate(180deg) !important;
 }
 
 .arrow:hover {
